[package]
name = "cylons"
version = "0.1.0"
authors = ["King's Way <io@stdio.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "*"
libc = "*"
rand = "*"
#pcap = "0.7"
pcap = {git="https://github.com/kings-way/pcap"}	# add "immediate mode"
toml = "0.5"
regex = "1"
sqlite = "0.25.0"
rustls = "*"
openssl = "0.10.25"
colored = "*"
num_cpus = "*"
libflate = "0.1.27"
tls-parser = "0.9.1"
etherparse = "0.9.0" 		# ethernet packet parse and packer builder 
threadpool = "1.7.1"
lazy_static = "1.4"
log = { version = "0.4", features = ["std"] }
ctrlc = { version = "3.1", features = ["termination"] }
rocket = { version = "0.4.2", default-features = false }
rocket_contrib = "0.4.2"
ureq = { version = "*", default-features = false, features = ["tls"] }

# pnet = { version = "0.22", default-features = false }	# capturing and manipulation, sender and receiver, depends on pcap
# packet-builder = "0.2.0"	# Like python scapy, depends on pnet, fork of sendpacket
# rshijack = "0.3.0" 		# TCP Hijack crate, depends on pnet, just bin tool

# pktparse = "0.4" 			# can only parse headers
# sniffglue = "0.9.0"		# sniffer & parser, able to parse some TCP/UDP payload, like http/dns
# rshark = "0.0.1" 			# too little functions available, stupid crates
# pcap-parser = "0.8.0" 	# pcap-parser, not much functions as well
# snoopy = "0.3.2"			# can only parse headers, based on pcap and tls-parser..., just bin tools, no lib to be used
